# MemSLM

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: REPRODUCIBILITY.md  RESULTS.md  THESIS_ASSET_CHECKLIST.md
llm_long_memory/: __init__.py  main.py
llm_long_memory/baselines/: BASELINE_PROTOCOL.md  __init__.py  baseline_midrag_v1.yaml  run_baseline.py
llm_long_memory/cli/: __init__.py  runtime.py
llm_long_memory/config/: baseline_midrag_v1.yaml  config.yaml
llm_long_memory/evaluation/: BASELINE_PROTOCOL.md  dataset_loader.py  eval_reporting.py  eval_runner.py  eval_store.py  longmemeval_loader.py  metrics_runtime.py  offline_graph_eval.py  run_baseline.py
llm_long_memory/experiments/: README.md  __init__.py  build_eval_split.py  build_eval_subset.py  cli_utils.py  direct_eval_runner.py  eval_launcher.py  export_eval_report.py  export_graph.py  llm_judge.py  local_llm_judge.py  render_thesis_visuals.py  report_audit_utils.py  run_ablation_eval.py  run_model_only_eval.py  run_naive_rag_eval.py  run_thesis_compare.py  run_thesis_eval.py  thesis_mode_runner.py  thesis_report_builder.py
llm_long_memory/future_work/: README.md
llm_long_memory/llm/: ollama_client.py
llm_long_memory/memory/: __init__.py  answer_grounding_pipeline.py  answer_response_guard.py  answering_candidate_extractor.py  answering_pipeline.py  answering_response.py  answering_temporal.py  counting_dates.py  counting_entities.py  counting_resolver.py  evidence_candidate_extractor.py  (+39 more)
(+43 files in other folders)
