[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memslm"
version = "0.1.0"
description = "Research code for long-conversation QA with hybrid RAG, light-graph memory organization, and specialized reasoning modules."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RCF-117" }]
dependencies = [
    "numpy==1.26.4",
    "pyyaml==6.0.2",
    "networkx==3.3",
    "faiss-cpu==1.8.0",
    "ollama==0.4.7",
]

[tool.setuptools.packages.find]
include = ["llm_long_memory*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["llm_long_memory/tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
